Demo pages: activiti, news & fix ui error

--- a/pages/activity.html
+++ b/pages/activity.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hoạt Động Khoảng Trời Của Bé</title>
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
+    <link rel="icon" type="image/x-icon" href="/assets/img/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -36,8 +36,246 @@
 <body>
     <header></header>
 
-    <div id="primary" style="margin-top: 80px;" class="container-fluid px-4 px-md-5">
-        
+    <div id="primary" class="container-fluid px-3 px-md-5 mt-3">
+        <section class="acti-news pt-lg-3 pt-4">
+            <div class="d-flex flex-column justify-content-center align-items-center mb-5">
+                <h1 class="title-section mb-2" data-aos="fade-right">hoạt động - dự án</h1>
+                <span class="span-section">Những hoạt động đã, đang được tổ chức bởi Khoảng Trời Của Bé.</span>
+            </div>
+            <ul class="nav nav-pills mb-5" id="pills-tab" role="tablist">
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link active" id="pills-finished-tab" data-bs-toggle="pill"
+                        data-bs-target="#pills-finished" type="button" role="tab" aria-controls="pills-finished"
+                        aria-selected="true">Đã tổ chức</button>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link" id="pills-inprogress-tab" data-bs-toggle="pill"
+                        data-bs-target="#pills-inprogress" type="button" role="tab" aria-controls="pills-inprogress"
+                        aria-selected="false">Đang triển khai</button>
+                </li>
+            </ul>
+            <div class="tab-content mb-4" id="pills-tabContent">
+                <div class="tab-pane fade show active" id="pills-finished" role="tabpanel"
+                    aria-labelledby="pills-finished-tab" tabindex="0">
+                    <div class="row">
+                        <div
+                            class="d-flex flex-column align-items-center gap-3 px-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-4">
+                            <a href="/pages/news.html" class="activity-hover">
+                                <div class="activity-card">
+                                    <div class="activity-card-img">
+                                        <img src="https://images.unsplash.com/photo-1517164850305-99a3e65bb47e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
+                                            alt="">
+                                    </div>
+                                    <div class="activity-card-content">
+                                        <span>dd/mm/yyyy</span>
+                                        <h3>Lorem ipsum dolor sit amet</h3>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae sequi aut
+                                            dolore
+                                            aspernatur ad iure officia sit aperiam, culpa in.</p>
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div
+                            class="d-flex flex-column align-items-center gap-3 px-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-4">
+                            <a href="/pages/news.html" class="activity-hover">
+                                <div class="activity-card">
+                                    <div class="activity-card-img">
+                                        <img src="https://images.unsplash.com/photo-1488521787991-ed7bbaae773c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
+                                            alt="">
+                                    </div>
+                                    <div class="activity-card-content">
+                                        <span>dd/mm/yyyy</span>
+                                        <h3>Lorem ipsum dolor sit amet</h3>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae sequi aut
+                                            dolore
+                                            aspernatur ad iure officia sit aperiam, culpa in.</p>
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div
+                            class="d-flex flex-column align-items-center gap-3 px-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-4">
+                            <a href="/pages/news.html" class="activity-hover">
+                                <div class="activity-card">
+                                    <div class="activity-card-img">
+                                        <img src="https://images.unsplash.com/photo-1540479859555-17af45c78602?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1yZWxhdGVkfDEyfHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60"
+                                            alt="">
+                                    </div>
+                                    <div class="activity-card-content">
+                                        <span>dd/mm/yyyy</span>
+                                        <h3>Lorem ipsum dolor sit amet</h3>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae sequi aut
+                                            dolore
+                                            aspernatur ad iure officia sit aperiam, culpa in.</p>
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div
+                            class="d-flex flex-column align-items-center gap-3 px-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-4">
+                            <a href="/pages/news.html" class="activity-hover">
+                                <div class="activity-card">
+                                    <div class="activity-card-img">
+                                        <img src="https://media.istockphoto.com/id/176237005/photo/looking-out-for-each-other.jpg?s=170667a&w=0&k=20&c=MEQCN3Ow73O174VSAKwpnzXLdPOMIJI-i6zJOBFo5NE="
+                                            alt="">
+                                    </div>
+                                    <div class="activity-card-content">
+                                        <span>dd/mm/yyyy</span>
+                                        <h3>Lorem ipsum dolor sit amet</h3>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae sequi aut
+                                            dolore
+                                            aspernatur ad iure officia sit aperiam, culpa in.</p>
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div
+                            class="d-flex flex-column align-items-center gap-3 px-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-4">
+                            <a href="/pages/news.html" class="activity-hover">
+                                <div class="activity-card">
+                                    <div class="activity-card-img">
+                                        <img src="https://images.unsplash.com/photo-1497486751825-1233686d5d80?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1yZWxhdGVkfDJ8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
+                                            alt="">
+                                    </div>
+                                    <div class="activity-card-content">
+                                        <span>dd/mm/yyyy</span>
+                                        <h3>Lorem ipsum dolor sit amet</h3>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae sequi aut
+                                            dolore
+                                            aspernatur ad iure officia sit aperiam, culpa in.</p>
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="tab-pane fade" id="pills-inprogress" role="tabpanel" aria-labelledby="pills-inprogress-tab"
+                    tabindex="0">
+                    <div class="row">
+                        <div
+                            class="d-flex flex-column align-items-center gap-3 px-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-4">
+                            <a href="/pages/news.html" class="activity-hover">
+                                <div class="activity-card">
+                                    <div class="activity-card-img">
+                                        <img src="https://images.unsplash.com/photo-1489710437720-ebb67ec84dd2?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1yZWxhdGVkfDE3fHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60"
+                                            alt="">
+                                    </div>
+                                    <div class="activity-card-content">
+                                        <span>dd/mm/yyyy</span>
+                                        <h3>Lorem ipsum dolor sit amet</h3>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae sequi aut
+                                            dolore
+                                            aspernatur ad iure officia sit aperiam, culpa in.</p>
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div
+                            class="d-flex flex-column align-items-center gap-3 px-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-4">
+                            <a href="/pages/news.html" class="activity-hover">
+                                <div class="activity-card">
+                                    <div class="activity-card-img">
+                                        <img src="https://images.unsplash.com/photo-1444840535719-195841cb6e2b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1yZWxhdGVkfDIwfHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60"
+                                            alt="">
+                                    </div>
+                                    <div class="activity-card-content">
+                                        <span>dd/mm/yyyy</span>
+                                        <h3>Lorem ipsum dolor sit amet</h3>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae sequi aut
+                                            dolore
+                                            aspernatur ad iure officia sit aperiam, culpa in.</p>
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div
+                            class="d-flex flex-column align-items-center gap-3 px-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-4">
+                            <a href="/pages/news.html" class="activity-hover">
+                                <div class="activity-card">
+                                    <div class="activity-card-img">
+                                        <img src="https://images.unsplash.com/photo-1509099836639-18ba1795216d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1yZWxhdGVkfDE5fHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60"
+                                            alt="">
+                                    </div>
+                                    <div class="activity-card-content">
+                                        <span>dd/mm/yyyy</span>
+                                        <h3>Lorem ipsum dolor sit amet</h3>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae sequi aut
+                                            dolore
+                                            aspernatur ad iure officia sit aperiam, culpa in.</p>
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div
+                            class="d-flex flex-column align-items-center gap-3 px-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-4">
+                            <a href="/pages/news.html" class="activity-hover">
+                                <div class="activity-card">
+                                    <div class="activity-card-img">
+                                        <img src="https://images.unsplash.com/photo-1526976668912-1a811878dd37?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTh8fHZvbHVudGVlcnN8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+                                            alt="">
+                                    </div>
+                                    <div class="activity-card-content">
+                                        <span>dd/mm/yyyy</span>
+                                        <h3>Lorem ipsum dolor sit amet</h3>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae sequi aut
+                                            dolore
+                                            aspernatur ad iure officia sit aperiam, culpa in.</p>
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div
+                            class="d-flex flex-column align-items-center gap-3 px-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-4">
+                            <a href="/pages/news.html" class="activity-hover">
+                                <div class="activity-card">
+                                    <div class="activity-card-img">
+                                        <img src="https://images.unsplash.com/photo-1516321318423-f06f85e504b3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTB8fHZvbHVudGVlcnN8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+                                            alt="">
+                                    </div>
+                                    <div class="activity-card-content">
+                                        <span>dd/mm/yyyy</span>
+                                        <h3>Lorem ipsum dolor sit amet</h3>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae sequi aut
+                                            dolore
+                                            aspernatur ad iure officia sit aperiam, culpa in.</p>
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div
+                            class="d-flex flex-column align-items-center gap-3 px-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-4">
+                            <a href="/pages/news.html" class="activity-hover">
+                                <div class="activity-card">
+                                    <div class="activity-card-img">
+                                        <img src="https://plus.unsplash.com/premium_photo-1663054834323-7badd31755f4?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8dm9sdW50ZWVyc3xlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60"
+                                            alt="">
+                                    </div>
+                                    <div class="activity-card-content">
+                                        <span>dd/mm/yyyy</span>
+                                        <h3>Lorem ipsum dolor sit amet</h3>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae sequi aut
+                                            dolore
+                                            aspernatur ad iure officia sit aperiam, culpa in.</p>
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 
     <footer></footer>
