--- a/pages/contact.html
+++ b/pages/contact.html
@@ -36,9 +36,9 @@
 <body>
     <header></header>
 
-    <div id="primary" class="container-fluid px-4 px-md-5 mt-3">
-        <form class="row g-3 needs-validation contact" novalidate>
-            <div class="row py-5">
+    <div id="primary" class="container-fluid px-3 px-md-5 mt-3">
+        <form class="row g-3 needs-validation contact justify-content-center" novalidate>
+            <div class="row py-lg-5 py-3 mb-lg-0 mb-4">
                 <div class="col-lg-8 col-12 d-flex flex-column align-items-center gap-4">
                     <div class=" col-md-8 col-12 d-flex flex-column justify-content-center align-items-center mb-3">
                         <h1 class="title-section mb-2" data-aos="fade-right">Liên hệ</h1>
