--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
             </section>
 
             <section class="background-intro mb-5">
-                <div class="background-intro-text overflow-auto" data-aos="flip-up" data-aos-duration="2000">
+                <div class="background-intro-text overflow-auto">
                     <h2 class="mb-5 fw-bold text-center position-relative">
                         Hãy Hợp Tác Cùng Chúng Tôi
-                        <i class="fa-solid fa-quote-right d-none d-md-flex"></i>
+                        <i class="fa-solid fa-quote-right d-none d-md-flex" data-aos="flip-right" data-aos-duration="2000"></i>
                     </h2>
                     <span class="text-center mb-4">
                         <em>"Tại Khoảng Trời Của Bé, chúng tôi khát vọng về một tương lai nơi mà
@@ -123,14 +123,14 @@
                 <div class="title-wrapper">
                     <div class="d-flex flex-column justify-content-center align-items-center mb-5">
                         <h1 class="title-section mb-2" data-aos="fade-right">Hoạt Động</h1>
-                        <span class="span-section" data-aos="fade-right" data-aos-delay="200">Những hoạt động đã được tổ
+                        <span class="span-section" data-aos="fade-right" data-aos-delay="200">Những hoạt động đã, đang được tổ
                             chức bởi Khoảng Trời Của Bé.</span>
                     </div>
                 </div>
                 <div class="activities-slider">
                     <div class="d-flex flex-column align-items-center gap-3 px-3" data-aos="fade-up"
                         data-aos-delay="400" data-aos-duration="2000">
-                        <a href="#" class="activity-hover">
+                        <a href="/pages/news.html" class="activity-hover">
                             <div class="activity-card">
                                 <div class="activity-card-img">
                                     <img src="https://images.unsplash.com/photo-1517164850305-99a3e65bb47e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
@@ -148,7 +148,7 @@
                     </div>
                     <div class="d-flex flex-column align-items-center gap-3 px-3" data-aos="fade-up"
                         data-aos-duration="2000" data-aos-delay="800">
-                        <a href="#" class="activity-hover">
+                        <a href="/pages/news.html" class="activity-hover">
                             <div class="activity-card">
                                 <div class="activity-card-img">
                                     <img src="https://images.unsplash.com/photo-1488521787991-ed7bbaae773c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
@@ -166,7 +166,7 @@
                     </div>
                     <div class="d-flex flex-column align-items-center gap-3 px-3" data-aos="fade-up"
                         data-aos-duration="2000" data-aos-delay="1200">
-                        <a href="#" class="activity-hover">
+                        <a href="/pages/news.html" class="activity-hover">
                             <div class="activity-card">
                                 <div class="activity-card-img">
                                     <img src="https://images.unsplash.com/photo-1489710437720-ebb67ec84dd2?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1yZWxhdGVkfDE3fHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60"
@@ -184,7 +184,7 @@
                     </div>
                     <div class="d-flex flex-column align-items-center gap-3 px-3" data-aos="fade-up"
                         data-aos-duration="2000" data-aos-delay="1600">
-                        <a href="#" class="activity-hover">
+                        <a href="/pages/news.html" class="activity-hover">
                             <div class="activity-card">
                                 <div class="activity-card-img">
                                     <img src="https://images.unsplash.com/photo-1444840535719-195841cb6e2b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1yZWxhdGVkfDIwfHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60"
@@ -202,7 +202,7 @@
                     </div>
                     <div class="d-flex flex-column align-items-center gap-3 px-3" data-aos="fade-up"
                         data-aos-duration="2000" data-aos-delay="2000">
-                        <a href="#" class="activity-hover">
+                        <a href="/pages/news.html" class="activity-hover">
                             <div class="activity-card">
                                 <div class="activity-card-img">
                                     <img src="https://images.unsplash.com/photo-1509099836639-18ba1795216d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1yZWxhdGVkfDE5fHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60"
