--- a/pages/introduction-team.html
+++ b/pages/introduction-team.html
@@ -2,24 +2,24 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Giới thiệu Khoảng Trời Của Bé</title>
-    <link rel="icon" type="image/x-icon" href="/assets/img/favicon.png">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" type="image/x-icon" href="/assets/img/favicon.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700&family=Raleway:wght@300;400;500;700&display=swap"
-        rel="stylesheet">
+        rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" type="text/css" media="screen" href='/assets/css/app.css'>
-    <link rel="stylesheet" type="text/css" media="screen" href='/assets/css/main.css'>
-    <link rel="stylesheet" type="text/css" media="screen" href='/assets/css/style.css'>
+    <link rel="stylesheet" type="text/css" media="screen" href="/assets/css/app.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="/assets/css/main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="/assets/css/style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
         integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -36,120 +36,170 @@
 <body>
     <header></header>
 
-    <div id="primary" class="container-fluid px-4 px-md-5 mb-5 mt-3">
-        <section class="team pt-lg-3 pt-4 ">
+    <div id="primary" class="container-fluid px-3 px-md-5 mb-5 mt-3">
+        <section class="team pt-lg-3 pt-4">
             <div class="d-flex flex-column justify-content-center align-items-center mb-5">
                 <h1 class="title-section mb-2" data-aos="fade-right">thành viên</h1>
                 <span class="span-section">Đội ngũ Khoảng Trời Của Bé</span>
             </div>
-            <div class="team-form" data-aos="zoom-in-up" data-aos-duration="2000">
+            <div class="team-form">
                 <div class="team-card">
                     <div class="team-card-top">
                         <img src="https://images.unsplash.com/photo-1668479242505-3476b126f400?ixlib=rb-4.0.3&ixid=MnwxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHwyMXx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60"
-                            alt="">
+                            alt="" />
                     </div>
                     <div class="team-card-bottom">
                         <h4>Position</h4>
                         <ul class="d-flex justify-content-center align-items-center gap-3">
-                            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-facebook-messenger"></i></a></li>
-                            <li><a href="#"><i class="fa-solid fa-envelope"></i></a></li>
+                            <li>
+                                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa-brands fa-facebook-messenger"></i></a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa-solid fa-envelope"></i></a>
+                            </li>
                         </ul>
                     </div>
                 </div>
                 <div class="team-card">
                     <div class="team-card-top">
                         <img src="https://images.unsplash.com/photo-1664575602276-acd073f104c1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHwyNnx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60"
-                            alt="">
+                            alt="" />
                     </div>
                     <div class="team-card-bottom">
                         <h4>Position</h4>
                         <ul class="d-flex justify-content-center align-items-center gap-3">
-                            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-facebook-messenger"></i></a></li>
-                            <li><a href="#"><i class="fa-solid fa-envelope"></i></a></li>
+                            <li>
+                                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa-brands fa-facebook-messenger"></i></a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa-solid fa-envelope"></i></a>
+                            </li>
                         </ul>
                     </div>
                 </div>
                 <div class="team-card">
                     <div class="team-card-top">
-                        <img src="https://images.unsplash.com/photo-1668426847233-94aed2826199?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyOXx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60 alt="">
-                    </div>
-                    <div class=" team-card-bottom">
+                        <img src="https://images.unsplash.com/photo-1668426847233-94aed2826199?ixlib=rb-4.0.3&          ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyOXx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60
+                            alt="">
+                </div>
+                <div class=" team-card-bottom">
                         <h4>Position</h4>
                         <ul class="d-flex justify-content-center align-items-center gap-3">
-                            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-facebook-messenger"></i></a></li>
-                            <li><a href="#"><i class="fa-solid fa-envelope"></i></a></li>
+                            <li>
+                                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa-brands fa-facebook-messenger"></i></a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa-solid fa-envelope"></i></a>
+                            </li>
                         </ul>
                     </div>
                 </div>
                 <div class="team-card">
                     <div class="team-card-top">
                         <img src="https://images.unsplash.com/photo-1668380298208-de2df24d3a54?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwzOHx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60"
-                            alt="">
+                            alt="" />
                     </div>
                     <div class="team-card-bottom">
                         <h4>Position</h4>
                         <ul class="d-flex justify-content-center align-items-center gap-3">
-                            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-facebook-messenger"></i></a></li>
-                            <li><a href="#"><i class="fa-solid fa-envelope"></i></a></li>
+                            <li>
+                                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa-brands fa-facebook-messenger"></i></a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa-solid fa-envelope"></i></a>
+                            </li>
                         </ul>
                     </div>
                 </div>
                 <div class="team-card">
                     <div class="team-card-top">
                         <img src="https://images.unsplash.com/photo-1668479242505-3476b126f400?ixlib=rb-4.0.3&ixid=MnwxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHwyMXx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60"
-                            alt="">
+                            alt="" />
                     </div>
                     <div class="team-card-bottom">
                         <h4>Position</h4>
                         <ul class="d-flex justify-content-center align-items-center gap-3">
-                            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-facebook-messenger"></i></a></li>
-                            <li><a href="#"><i class="fa-solid fa-envelope"></i></a></li>
+                            <li>
+                                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa-brands fa-facebook-messenger"></i></a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa-solid fa-envelope"></i></a>
+                            </li>
                         </ul>
                     </div>
                 </div>
                 <div class="team-card">
                     <div class="team-card-top">
                         <img src="https://images.unsplash.com/photo-1664575602276-acd073f104c1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHwyNnx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60"
-                            alt="">
+                            alt="" />
                     </div>
                     <div class="team-card-bottom">
                         <h4>Position</h4>
                         <ul class="d-flex justify-content-center align-items-center gap-3">
-                            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-facebook-messenger"></i></a></li>
-                            <li><a href="#"><i class="fa-solid fa-envelope"></i></a></li>
+                            <li>
+                                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa-brands fa-facebook-messenger"></i></a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa-solid fa-envelope"></i></a>
+                            </li>
                         </ul>
                     </div>
                 </div>
                 <div class="team-card">
                     <div class="team-card-top">
-                        <img src="https://images.unsplash.com/photo-1668426847233-94aed2826199?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyOXx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60 alt="">
-                    </div>
-                    <div class=" team-card-bottom">
+                        <img src="https://images.unsplash.com/photo-1668426847233-94aed2826199?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyOXx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60
+                            alt="">
+                </div>
+                <div class=" team-card-bottom">
                         <h4>Position</h4>
                         <ul class="d-flex justify-content-center align-items-center gap-3">
-                            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-facebook-messenger"></i></a></li>
-                            <li><a href="#"><i class="fa-solid fa-envelope"></i></a></li>
+                            <li>
+                                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa-brands fa-facebook-messenger"></i></a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa-solid fa-envelope"></i></a>
+                            </li>
                         </ul>
                     </div>
                 </div>
                 <div class="team-card">
                     <div class="team-card-top">
                         <img src="https://images.unsplash.com/photo-1668380298208-de2df24d3a54?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwzOHx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60"
-                            alt="">
+                            alt="" />
                     </div>
                     <div class="team-card-bottom">
                         <h4>Position</h4>
                         <ul class="d-flex justify-content-center align-items-center gap-3">
-                            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-facebook-messenger"></i></a></li>
-                            <li><a href="#"><i class="fa-solid fa-envelope"></i></a></li>
+                            <li>
+                                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa-brands fa-facebook-messenger"></i></a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa-solid fa-envelope"></i></a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -164,12 +214,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
-    <script defer src='/assets/js/main.js'></script>
+    <script defer src="/assets/js/main.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
         integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer">
-        </script>
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init({
