--- a/pages/introduction.html
+++ b/pages/introduction.html
@@ -36,7 +36,7 @@
 <body>
     <header></header>
 
-    <div id="primary" class="container-fluid px-4 px-md-5 mb-5 mt-3">
+    <div id="primary" class="container-fluid px-3 px-md-5 mb-5 mt-3">
         <section class="introduction pt-4">
             <div class="d-flex flex-column justify-content-center align-items-center mb-5">
                 <h1 class="title-section mb-2" data-aos="fade-right">Giới thiệu chung</h1>
@@ -45,26 +45,20 @@
             <div class="introduction-form">
                 <div class="introduction-inner">
                     <div class="introduction-inner-content">
-                        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis aut quos saepe tempora
-                            repellat consectetur eligendi. Sapiente vero sint aperiam quod delectus porro rem quibusdam
-                            impedit provident, aspernatur at architecto!</p>
+                        <h3 id="title"></h3>
+                        <p id="title-content"></p>
                     </div>
                     <div class="introduction-inner-image">
-                        <img src="https://images.unsplash.com/photo-1517164850305-99a3e65bb47e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
-                            alt="">
+                        <img alt="" id="img-1">
                     </div>
                 </div>
                 <div class="introduction-inner">
                     <div class="introduction-inner-content order-lg-1 order-0">
-                        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis aut quos saepe tempora
-                            repellat consectetur eligendi. Sapiente vero sint aperiam quod delectus porro rem quibusdam
-                            impedit provident, aspernatur at architecto!</p>
+                        <h3 id="title-2"></h3>
+                        <p id="title-content-2"></p>
                     </div>
                     <div class="introduction-inner-image">
-                        <img src="https://images.unsplash.com/photo-1509099836639-18ba1795216d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1yZWxhdGVkfDE5fHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60"
-                            alt="">
+                        <img id="img-2" alt="">
                     </div>
                 </div>
             </div>
@@ -74,10 +68,10 @@
                 <h1 class="title-section mb-2" data-aos="fade-right">Chặng đường đã đi</h1>
                 <span class="span-section">Cùng trải nghiệm với Khoảng Trời Của Bé.</span>
             </div>
-            <div class="timeline-background" data-aos="fade-left" data-aos-duration="2000"></div>
+            <div class="timeline-background" data-aos="fade-down" data-aos-duration="2000"></div>
             <div class="timeline-form">
                 <div class="timeline-item">
-                    <div class="timeline-item-year" data-aos="zoom-in-down" data-aos-duration="2000">
+                    <div class="timeline-item-year" data-aos="zoom-in-up" data-aos-duration="2000">
                         2015
                     </div>
                     <div class="timeline-item-image">
@@ -173,21 +167,22 @@
                     <h4 class="vision-box-title"
                         style="background-image: linear-gradient(to right bottom, #f40076, #df98fa)">Tầm nhìn</h4>
                     <p class="vision-box-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
-                        inventore unde expedita quis iure reprehenderit, </p>
-                    <p class="more-vision">deleniti ea, in, quasi aperiam excepturi maxime qui exercitationem amet?
+                        inventore unde expedita quis iure reprehenderit, deleniti ea, in, quasi aperiam excepturi
+                        maxime qui exercitationem amet?
                         Animi blanditiis quidem recusandae velit. Lorem ipsum dolor sit amet consectetur adipisicing
                         elit.</p>
-                    <button class="btn-vision">Xem Thêm</button>
+                    <button class="btn-vision"><i class="fa-solid fa-eye"></i></button>
                 </div>
                 <div class="vision-box">
                     <h4 class="vision-box-title"
                         style="background-image: linear-gradient(to right bottom, #fa7cbb, #f14658)">Sứ mệnh</h4>
                     <p class="vision-box-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
-                        inventore unde expedita quis iure reprehenderit,</p>
-                    <p class="more-mission">deleniti ea, in, quasi aperiam excepturi maxime qui exercitationem amet?
+                        inventore unde expedita quis iure reprehenderit, deleniti ea, in, quasi aperiam excepturi
+                        maxime
+                        qui exercitationem amet?
                         Animi blanditiis quidem recusandae velit. Lorem ipsum dolor sit amet consectetur adipisicing
                         elit.</p>
-                    <button class="btn-mission">Xem Thêm</button>
+                    <button class="btn-mission"><i class="fa-solid fa-bars-progress"></i></button>
                 </div>
             </div>
         </section>
@@ -200,7 +195,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
-    <script defer src='/assets/js/main.js'></script>
+    <script src='/assets/js/main.js'></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
         integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg=="
